--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bun-setup",
   "type": "module",
   "version": "0.1.2",
+  "private": false,
   "module": "index.ts",
   "bin": {
     "bun-setup": "setup.ts"
