--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@kaynooo/utils": "^1.2.22",
-    "prompts": "^2.4.2"
+    "@clack/prompts": "^0.7.0",
+    "@kaynooo/utils": "^1.2.22"
   },
   "devDependencies": {
     "@kaynooo/eslint": "^1.1.13",
